@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/slang
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.90 2008/04/04 13:32:55 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.91 2008/05/29 15:33:33 drac Exp $
+
+  29 May 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
+  keyword ~arm
 
   04 Apr 2008; Samuli Suominen <drac@gentoo.org> slang-2.1.3-r1.ebuild:
   Keyword ~sparc-fbsd, thanks to Uberlord for testing.
